# switchboard

./: .editorconfig  .gitignore  .prettierignore  .prettierrc  AGENTS.md  Cargo.toml  Makefile  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/workflows/: hygiene.yml
crates/app/: Cargo.toml  tauri.conf.json
crates/app/capabilities/: default.json
crates/app/icons/: icon.icns
crates/app/resources/prompts/: code-review.md
crates/app/src/: commands.rs  dispatch_context.rs  emitter.rs  error.rs  git_registry.rs  journal.rs  lib.rs  locator_sink.rs  main.rs  metadata.rs  preferences.rs  prompts_setup.rs  secret_store.rs  state.rs  wake_lock.rs  workflow.rs  workflow_commands.rs  workspace.rs
crates/core/: Cargo.toml
crates/core/src/: agent.rs  attachment.rs  directory.rs  error.rs  harness.rs  io.rs  journal.rs  lib.rs  name.rs  paths.rs  project.rs
crates/core/tests/: multi_project.rs
crates/dispatcher/: Cargo.toml
crates/dispatcher/src/: lib.rs
crates/dispatcher/tests/: dispatcher_with_mock.rs  live_end_to_end.rs
crates/git/: Cargo.toml
crates/git/src/: error.rs  lib.rs  model.rs  read.rs
crates/git/tests/: read.rs
crates/harness/: Cargo.toml
crates/harness/src/: adapter.rs  claude_code.rs  events.rs  facets.rs  forward.rs  lib.rs  meta_sidecar.rs  mock.rs  parser.rs  resume.rs  subprocess.rs  transcript.rs  turnmeta_sidecar.rs
crates/harness/src/antigravity/: config.rs  facets.rs  mod.rs  parser.rs  paths.rs  session_file.rs  sidecar.rs  skills.rs
crates/harness/src/claude_code/: config.rs  facets.rs  mod.rs  session_file.rs  skills.rs
crates/harness/src/codex/: config.rs  facets.rs  mod.rs  parser.rs  session_file.rs  sidecar.rs  skills.rs
crates/harness/src/gemini/: config.rs  mod.rs  parser.rs  session_file.rs  skills.rs
crates/harness/tests/: README.md  antigravity_adapter.rs  claude_adapter.rs  codex_adapter.rs  gemini_adapter.rs  live.rs  mock_adapter.rs  tool_use.rs  transcript_load.rs
crates/harness/tests/fixtures/: exit1-after-completed.jsonl  failed-turn.jsonl  malformed-json.jsonl  text-only.jsonl  tool-use.jsonl
crates/harness/tests/fixtures/antigravity/: mcp-tool-wrapper.transcript.jsonl  tool-use.transcript.jsonl  tool-vocabulary.transcript.jsonl
crates/harness/tests/fixtures/claude/: auth-failure.jsonl  background-agent-interleaved.jsonl  exit1-after-notification.jsonl  malformed-after-result.jsonl  mcp-content-mutation.jsonl  mcp-content-mutation.session.jsonl  stdin-reader.jsonl  subagent-delegation.jsonl  tool-vocabulary.jsonl  tool-vocabulary.session.jsonl  truncated.jsonl  with-usage.jsonl
crates/harness/tests/fixtures/codex/: apply-patch.session.jsonl  auth-failure.jsonl  auth-failure.stderr.txt  errored.jsonl  exec-wrapper-ambiguous.session.jsonl  exec-wrapper.session.jsonl  file-change.jsonl  mcp-content-mutations.jsonl  mcp-content-mutations.session.jsonl  mcp-tool-call.jsonl  rate-limits.session.jsonl  rate-limits.stream.jsonl  resume.jsonl  tool-use.jsonl
crates/harness/tests/fixtures/gemini/: benign-trailing-error.stream.jsonl  error-invalid-model.stderr.txt  error-invalid-model.stream.jsonl  error-unknown-resume.stderr.txt  happy-path.session.jsonl  happy-path.stream.jsonl  interleaved-collision.session.jsonl  mcp-content-mutations.session.jsonl  mcp-content-mutations.stream.jsonl  resume.stream.jsonl  tool-use.session.jsonl  tool-use.stream.jsonl
crates/prompts/: Cargo.toml
crates/prompts/resources/prompts/: ai-review-feedback.md  analyze-ai-reviews.md  code-review.md  security-review.md
crates/prompts/src/: builtin.rs  config.rs  lib.rs  local.rs  mcp.rs  model.rs  provider.rs  secret.rs  service.rs
crates/prompts/tests/: mcp_server.rs
crates/workflow/: Cargo.toml
crates/workflow/resources/workflows/: review-analyze-discuss.yaml  review-and-aggregate.yaml  review-and-recommend.yaml  review-and-reconcile.yaml
crates/workflow/src/: builtin.rs  checkpoint.rs  display.rs  error.rs  invocation.rs  lib.rs  model.rs  parse.rs  run.rs  template.rs
crates/workflow/tests/: worked_examples.rs
crates/workflow/tests/fixtures/: implement-milestones.yaml  plan-then-implement.yaml  review-and-aggregate.yaml
docs/: blueprint.md  competitive-landscape.md  harness-behavior.md  harness-update-review.md  m1-implementation-plan.md  m2-implementation-plan.md  plan.md  system-design.md  ui-conventions.md  v1-plan.md  workflow-spec.md
docs/agent-instructions/: prompts.md  workflows.md
docs/images/: ICON.md
docs/implementation_plans/: 2026-05-12-v1-m1.md  2026-05-12-v1-m2-agent-adaptors.md  2026-05-12-v1-m2.md  2026-05-12-v1-m3-gemini-adapter.md  2026-05-12-v1-m3B-antigravity-adapter.md  2026-05-12-v1-m4-dispatcher-contention-cancel.md  2026-05-12-v1.md  2026-05-18-note-claude-context-cache-formula.md  2026-05-18-note-claude-cost-context-persistence.md  2026-05-24-subagent-rendering-fidelity.md  2026-05-25-ui-foundation.md  2026-05-26-markdown-rendering.md  2026-05-27-claude-session-file-parser-fidelity.md  2026-05-27-harness-failure-metadata-surfacing.md  2026-05-27-transcript-preview-collapse.md  2026-05-29-agent-autocreate-rename-remove.md  2026-05-30-heartbeat-liveness-quiet-indicator.md  2026-05-30-macos-release-distribution.md  2026-05-30-per-agent-model-selection.md  2026-05-30-project-management.md  2026-05-31-compose-draft-recipient-persistence.md  2026-05-31-embedded-terminal.md  2026-05-31-git-view.md  2026-05-31-per-message-metadata-and-context-formula.md  2026-05-31-session-identity-into-registry.md  2026-06-01-claude-thinking-fix.md  2026-06-01-prompt-mcp-support.md  2026-06-05-hydration-robustness.md  2026-06-07-attachments.md  2026-06-07-cancelled-mid-turn-reopen-dedup.md  2026-06-07-in-flight-turn-hydration-dedup.md  2026-06-08-webkit-component-tests.md  2026-06-09-claude-fable.md  2026-06-09-performance-improvements.md  2026-06-10-multi-panel-transcript.md  2026-06-15-workflows.md  (+8 more)
src/: App.svelte  App.test.ts  app.css  main.ts  vite-env.d.ts
src/lib/: api.ts  (+53 more)
tests/: browser-setup.ts  setup.ts  token-ramp-scan.test.ts
(+233 files in other folders)
