[package]
name = "switchboard-app"
description = "Switchboard desktop application (Tauri shell)"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
name = "switchboard_app"
crate-type = ["staticlib", "cdylib", "rlib"]

[lints]
workspace = true

[build-dependencies]
tauri-build = { workspace = true }

[dependencies]
switchboard-core = { path = "../core" }
switchboard-harness = { path = "../harness" }
switchboard-dispatcher = { path = "../dispatcher" }
tauri = { workspace = true }
tauri-plugin-dialog = { workspace = true }
tauri-plugin-single-instance = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
directories = "6.0.0"
futures.workspace = true
tauri-plugin-clipboard-manager = "2.3.2"
url = "2.5.8"
ignore = "0.4.25"
switchboard-prompts = { version = "0.0.1", path = "../prompts" }
keyring = { version = "3", features = ["apple-native"] }

[dev-dependencies]
tokio = { workspace = true }
tempfile = { workspace = true }
async-trait.workspace = true
tokio-stream.workspace = true
