[package]
name = "switchboard-git"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
chrono.workspace = true
git2 = { version = "0.21.0", default-features = false }
serde = { workspace = true, features = ["derive"] }
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true
