[package]
name = "switchboard-harness"
description = "Switchboard harness adapters: trait + ClaudeCode + Mock implementations"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
switchboard-core = { path = "../core" }
tokio = { workspace = true }
tokio-stream = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
which = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
tempfile = { workspace = true }
