[package]
name = "switchboard-harness"
description = "Switchboard harness adapters: trait + ClaudeCode + Mock implementations"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
switchboard-core = { path = "../core" }
tokio = { workspace = true }
tokio-stream = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
which = { workspace = true }
toml = { workspace = true }

# `nix` is unix-only and used by:
# - the `fake_claude` test binary (`src/bin/fake_claude.rs`) to write its own
#   pgid to a file so the integration test can verify process-group spawn
#   actually flows through ClaudeCodeAdapter::dispatch.
# - the process-group integration test itself (`tests/claude_adapter.rs`).
# Listed as a regular dep (not dev-dep) so the bin target can link it.
[target."cfg(unix)".dependencies]
nix = { version = "0.31.3", default-features = false, features = ["process", "signal"] }

[dev-dependencies]
tokio = { workspace = true }
tempfile = { workspace = true }
